# research-template

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: README.md
notebooks/: README.md
results/: README.md
src/: README.md  __init__.py
tests/: README.md
