[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-research-project"
version = "0.1.0"
description = "A template for reproducible research projects using uv."
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "ipykernel",
]

[tool.setuptools]
packages = ["src"]